Compiler/tests/good/Output/02_output.rs
// Single line comment
fn main(){
  println!(0);
  return;
}
