Compiler/tests/bad/Loops/01_loops.rs
// wrong condition type

fn main(){
    while(43){
        println!(3);
    }

    return;
}